# switchback-rs

./: .gitattributes  .gitignore  .rumdl.toml  .yamllint  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  proto  release-plz.toml
crates/switchback-assemble/: Cargo.toml  README.md
crates/switchback-assemble/src/: lib.rs
crates/switchback-asyncapi/: Cargo.toml  README.md  example-fixtures.lock.toml  meta-schemas.lock.toml
crates/switchback-asyncapi/meta-schemas/: README.md
crates/switchback-asyncapi/src/: category.rs  companion.rs  contract.rs  examples.rs  family.rs  lib.rs  link.rs  load.rs  manual.rs  meta_schemas.rs  meta_schemas_assets.rs  paths.rs
crates/switchback-asyncapi/src/populate/: bindings.rs  channels.rs  components.rs  entry_group.rs  groups.rs  mermaid.rs  messages.rs  mod.rs  operations.rs  protocol_attach.rs  refs.rs  schema_dispatch.rs  schema_outbreak.rs  version.rs
crates/switchback-asyncapi/tests/: meta_schema_integrity.rs  pass_through.rs
crates/switchback-asyncapi/tests/common/: mod.rs
crates/switchback-avro/: Cargo.toml  README.md  meta-schemas.lock.toml
crates/switchback-avro/src/: lib.rs  meta_schemas.rs  meta_schemas_assets.rs
crates/switchback-avro/src/schema/: body.rs  ir.rs  mod.rs  named.rs
crates/switchback-avro/tests/: meta_schema_integrity.rs  populate.rs
crates/switchback-avro/tests/common/: mod.rs
crates/switchback-codec-pb/: Cargo.toml  README.md  build.rs
crates/switchback-codec-pb/proto/: buf.yaml
crates/switchback-codec-pb/src/: codec.rs  lib.rs  pb.rs  protobuf.rs
crates/switchback-codec-pb/src/convert/: contract.rs  entity.rs  link.rs  manual.rs  mod.rs  protocol.rs
crates/switchback-codec-pb/tests/: roundtrip.rs
crates/switchback-jsonschema/: Cargo.toml  README.md
crates/switchback-jsonschema/src/: category.rs  companion.rs  contract.rs  examples.rs  family.rs  lib.rs  link.rs  load.rs  manual.rs  paths.rs  url_refs.rs  validate.rs
crates/switchback-jsonschema/src/envelope/: mod.rs
crates/switchback-jsonschema/src/loader/: doc.rs  mod.rs
crates/switchback-jsonschema/src/populate/: mod.rs
crates/switchback-jsonschema/src/resolver/: mod.rs  pointer.rs
crates/switchback-jsonschema/src/schema/: body.rs  ir.rs  mod.rs
crates/switchback-jsonschema/tests/: pass_through.rs
crates/switchback-jsonschema/tests/common/: mod.rs
crates/switchback-mdbook/: Cargo.toml  README.md
crates/switchback-mdbook/assets/theme/: protobuf-highlight.css
crates/switchback-mdbook/src/: book_config.rs  companion.rs  formatter.rs  init.rs  lib.rs  link_check.rs  options.rs  paths.rs  renderer.rs
crates/switchback-mdbook/src/highlight/: book_toml.rs  cel.rs  cel_split.rs  engine.rs  html.rs  markdown.rs  mod.rs  protobuf.rs
crates/switchback-mdbook/src/render/: asyncapi.rs  entity.rs  fence.rs  markdown_doc.rs  mod.rs  openapi.rs  openrpc.rs  operation_fence.rs  package.rs
crates/switchback-mdbook/src/summary/: chapters.rs  mod.rs  nav_tree.rs  render_md.rs
crates/switchback-mdbook/tests/: asyncapi_acme_link_check.rs  asyncapi_acme_regression.rs  asyncapi_link_check.rs  asyncapi_regression.rs  link_check.rs  mdbook_highlight.rs  openapi_acme_regression.rs  openapi_link_check.rs  openapi_regression.rs  openrpc_link_check.rs  openrpc_regression.rs  output_regression.rs  reference_manual_regression.rs
crates/switchback-mdbook/tests/common/: mod.rs
crates/switchback-openapi/: Cargo.toml  README.md  example-fixtures.lock.toml  meta-schemas.lock.toml
crates/switchback-openapi/meta-schemas/: README.md
crates/switchback-openapi/src/: category.rs  companion.rs  contract.rs  examples.rs  family.rs  lib.rs  link.rs  load.rs  manual.rs  meta_schemas.rs  meta_schemas_assets.rs  paths.rs
crates/switchback-openapi/src/populate/: components.rs  entry_group.rs  groups.rs  http_attach.rs  mod.rs  operation.rs  paths.rs  refs.rs  schema_type_label.rs
crates/switchback-openapi/tests/: jsonschema_meta_loader.rs  meta_schema_integrity.rs  pass_through.rs
crates/switchback-openapi/tests/common/: mod.rs
crates/switchback-openrpc/: Cargo.toml  README.md  example-fixtures.lock.toml  meta-schemas.lock.toml
crates/switchback-openrpc/meta-schemas/: README.md
crates/switchback-openrpc/src/: category.rs  companion.rs  contract.rs  examples.rs  family.rs  lib.rs  link.rs  load.rs  manual.rs  meta_schemas.rs  meta_schemas_assets.rs  paths.rs
crates/switchback-openrpc/src/populate/: components.rs  entry_group.rs  groups.rs  methods.rs  mod.rs  refs.rs  schema_type_label.rs
crates/switchback-openrpc/tests/: fixtures_upstream_load_smoke.rs  jsonschema_meta_loader.rs  meta_schema_integrity.rs  pass_through.rs
crates/switchback-openrpc/tests/common/: mod.rs
crates/switchback-protobuf/: Cargo.toml  README.md
crates/switchback-protobuf/src/: category.rs  companion.rs  contract.rs  descriptor.rs  descriptor_util.rs  examples.rs  family.rs  lib.rs  link.rs  load.rs  manual.rs  paths.rs  proto_deps.rs
crates/switchback-protobuf/src/input/: buf.rs  fds.rs  merge.rs  mod.rs  protoc.rs
crates/switchback-protobuf/tests/: features_disabled.rs  fixtures_integrity.rs  pass_through.rs
crates/switchback-protocols/: Cargo.toml  README.md
crates/switchback-protocols/src/: amqp.rs  grpc.rs  http.rs  kafka.rs  lib.rs  mqtt.rs  registry.rs  severity.rs  traits.rs  wire.rs
crates/switchback-protocols/tests/: codec_roundtrip.rs
crates/switchback-traits/: Cargo.toml  README.md
crates/switchback-traits/src/: companion.rs  error.rs  ids.rs  intra_links.rs  layout_paths.rs  lib.rs  link_context.rs  options.rs  paths.rs  response_severity.rs  tests.rs
crates/switchback-traits/src/model/: link.rs  (+6 more)
examples/mdbook-asyncapi/: Cargo.toml  README.md  main.rs
examples/mdbook-openapi/: Cargo.toml  README.md  main.rs
examples/mdbook-protobuf/: Cargo.toml  README.md  main.rs
examples/reference-manual/: Cargo.toml  README.md  main.rs  module.yaml
xtask/: Cargo.toml
xtask/src/: align_versions.rs  ci.rs  example_fixtures.rs  highlight.rs  link_check.rs  main.rs  publish_check.rs  render.rs  spec_vendor.rs  workspace.rs
(+123 files in other folders)
