[workspace]
resolver = "2"
members = [
    "crates/switchback-traits",
    "crates/switchback-codec-pb",
    "crates/switchback-protocols",
    "crates/switchback-mdbook",
    "crates/switchback-protobuf",
    "crates/switchback-jsonschema",
    "crates/switchback-openapi",
    "crates/switchback-asyncapi",
    "crates/switchback-openrpc",
    "examples/mdbook-protobuf",
    "examples/mdbook-openapi",
    "xtask",
]

[workspace.package]
edition = "2021"
version = "0.0.0"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/canardleteer/switchback-rs"

[workspace.dependencies]
switchback-traits = { version = "0.0.0", path = "crates/switchback-traits" }
switchback-codec-pb = { version = "0.0.0", path = "crates/switchback-codec-pb" }
switchback-protocols = { version = "0.0.0", path = "crates/switchback-protocols" }
switchback-mdbook = { version = "0.0.0", path = "crates/switchback-mdbook" }
switchback-protobuf = { version = "0.0.0", path = "crates/switchback-protobuf" }
switchback-jsonschema = { version = "0.0.0", path = "crates/switchback-jsonschema" }
switchback-openapi = { version = "0.0.0", path = "crates/switchback-openapi" }
switchback-asyncapi = { version = "0.0.0", path = "crates/switchback-asyncapi" }
switchback-openrpc = { version = "0.0.0", path = "crates/switchback-openrpc" }
buffa = { version = "0.6.0", default-features = false, features = ["std"] }
buffa-descriptor = { version = "0.6.0", default-features = false, features = ["std"] }
protoc-bin-vendored = "3.2.0"
buf-tools = "=1.70.0-hotfix.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.27"
sha2 = "0.10"
walkdir = "2.5"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
jsonschema = "0.29"
tempfile = "3.19"
mdbook-core = "=0.5.3"
mdbook-driver = "=0.5.3"
mdbook-summary = "=0.5.3"
mdbook-preprocessor = "=0.5.3"
pulldown-cmark = "0.13"
regex = "1.11"
toml_edit = "0.25"
clap = { version = "4.5", features = ["derive"] }

[workspace.metadata.switchback-rs.toolchain]
buf = "1.70.0-hotfix.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
