[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Workspace task runner for switchback-rs: ci, fmt, clippy, test, parse, render, link-check, update-golden, check-toolchain."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
buf-tools.workspace = true
switchback-mdbook = { path = "../crates/switchback-mdbook" }
toml = "0.8"
toml_edit.workspace = true
