[package]
name = "switchback-assemble"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-contract manual assembly for the switchback framework."
categories = ["development-tools"]

[dependencies]
switchback-traits.workspace = true
switchback-openapi.workspace = true
switchback-openrpc.workspace = true
switchback-asyncapi.workspace = true
switchback-protobuf = { workspace = true, features = ["buf", "protoc"] }
