[package]
name = "switchback-asyncapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AsyncAPI parser for the switchback framework."
keywords = ["asyncapi", "events", "messaging", "parser", "api"]
categories = ["parser-implementations"]
include = [
    "src/**/*",
    "meta-schemas/**/*",
    "meta-schemas.lock.toml",
    "tests/fixtures/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchback-asyncapi"
path = "src/bin/switchback-asyncapi.rs"

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
switchback-protocols.workspace = true
switchback-jsonschema.workspace = true
switchback-avro.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
walkdir.workspace = true
anyhow.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
tempfile.workspace = true
switchback-codec-pb.workspace = true
