[package]
name = "switchback-codec-pb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference binary codec for the switchback: implements SwitchbackCodec using buffa-generated types from the wire-schema protobuf. A switchback binary file is the canonical serialized form."
include = [
    "src/**/*",
    "proto/canardleteer/**/*",
    "proto/buf.yaml",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "tests/**/*",
]

[lib]
path = "src/lib.rs"

[dependencies]
switchback-traits.workspace = true
buffa.workspace = true

[build-dependencies]
buffa-build = { version = "0.6.0", default-features = false }
protoc-bin-vendored = "3.1.0"

[dev-dependencies]
static_assertions = "1"
tokio = { version = "1", features = ["macros", "rt"] }
buffa.workspace = true
switchback-protocols.workspace = true
