[package]
name = "switchback-codec-pb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Binary codec for the switchback IR in the switchback framework."
keywords = ["protobuf", "serialization", "codec", "binary", "switchback"]
categories = ["encoding", "parser-implementations"]
include = [
    "src/**/*",
    "proto/canardleteer/**/*",
    "proto/buf.yaml",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "tests/**/*",
]

[lib]
path = "src/lib.rs"

[dependencies]
switchback-traits.workspace = true
buffa.workspace = true

[build-dependencies]
buffa-build = { version = "0.6.0", default-features = false }
protoc-bin-vendored = "3.1.0"

[dev-dependencies]
static_assertions = "1"
tokio = { version = "1", features = ["macros", "rt"] }
buffa.workspace = true
