[package]
name = "switchback-jsonschema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The shared JSON-Schema-document parser layer: loader, $ref resolver, shared API-description envelope, and schema renderer. Also a standalone parser that turns a JSON Schema catalog into a switchback."

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchback-jsonschema"
path = "src/bin/switchback-jsonschema.rs"

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
