[package]
name = "switchback-jsonschema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared JSON Schema layer for the switchback framework."
keywords = ["json-schema", "schema", "parser", "ref-resolution", "catalog"]
categories = ["parser-implementations"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchback-jsonschema"
path = "src/bin/switchback-jsonschema.rs"

[features]
default = []
url-refs = ["dep:reqwest"]
validate = ["dep:jsonschema"]

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
walkdir.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
