[package]
name = "switchback-mdbook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The mdBook renderer: turns a switchback binary file into an mdBook. Holds the mdBook-specific scaffolding (init, summary, book.toml, render driver) lifted from protobuf-mdbook."

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchback-mdbook"
path = "src/bin/switchback-mdbook.rs"

[[bin]]
name = "mdbook-protobuf-highlight"
path = "src/bin/mdbook-protobuf-highlight.rs"

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
switchback-protocols.workspace = true
anyhow.workspace = true
mdbook-core.workspace = true
mdbook-driver.workspace = true
mdbook-summary.workspace = true
mdbook-preprocessor.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
tempfile.workspace = true
async-trait = "0.1"
clap.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true

[dev-dependencies]
switchback-codec-pb.workspace = true
switchback-openapi.workspace = true
switchback-protobuf = { workspace = true, features = ["buf", "protoc"] }
tempfile.workspace = true
