[package]
name = "switchback-mdbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "mdBook renderer for the switchback framework."
keywords = ["mdbook", "documentation", "renderer", "reference-manual", "api"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchback-mdbook"
path = "src/bin/switchback-mdbook.rs"

[[bin]]
name = "mdbook-protobuf-highlight"
path = "src/bin/mdbook-protobuf-highlight.rs"

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
switchback-protocols.workspace = true
switchback-avro.workspace = true
anyhow.workspace = true
mdbook-core.workspace = true
mdbook-driver.workspace = true
mdbook-summary.workspace = true
mdbook-preprocessor.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
tempfile.workspace = true
async-trait = "0.1"
clap.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true

[dev-dependencies]
switchback-assemble = { path = "../switchback-assemble" }
switchback-asyncapi = { path = "../switchback-asyncapi" }
switchback-openapi = { path = "../switchback-openapi" }
switchback-openrpc = { path = "../switchback-openrpc" }
switchback-protobuf = { path = "../switchback-protobuf", features = ["buf", "protoc"] }
tempfile.workspace = true
