[package]
name = "switchback-openapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser that turns an OpenAPI Description into a switchback. Handles 3.0.x and 3.1.x, preserving the contract's version. Built on switchback-traits and switchback-jsonschema."

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchback-openapi"
path = "src/bin/switchback-openapi.rs"

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
switchback-jsonschema.workspace = true
