[package]
name = "switchback-openapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser that turns an OpenAPI Description into a switchback. Handles 3.0.x and 3.1.x, preserving the contract's version. Built on switchback-traits and switchback-jsonschema."
include = [
    "src/**/*",
    "meta-schemas/**/*",
    "meta-schemas.lock.toml",
    "example-fixtures.lock.toml",
    "tests/fixtures/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchback-openapi"
path = "src/bin/switchback-openapi.rs"

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
switchback-protocols.workspace = true
switchback-jsonschema.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
walkdir.workspace = true
anyhow.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
tempfile.workspace = true
switchback-codec-pb.workspace = true
