[package]
name = "switchback-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP and gRPC protocol attachments for the switchback framework."
keywords = ["http", "grpc", "protocol", "rpc", "api"]
categories = ["development-tools::documentation-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[dependencies]
switchback-traits.workspace = true
switchback-codec-pb.workspace = true
buffa.workspace = true

[dev-dependencies]
