[package]
name = "switchback-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core seam crate: ContractFamily, Contract, Renderer, LinkExtractor, LinkFormatter, SwitchbackCodec traits and the in-memory ReferenceManual model."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"

[dev-dependencies]
static_assertions = "1"
tempfile = "3"
