[package]
name = "switchback-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core traits of the switchback framework."
keywords = ["api", "documentation", "reference-manual", "traits", "ir"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"

[dev-dependencies]
static_assertions = "1"
tempfile = "3"
