[package]
name = "mdbook-protobuf-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "mdbook-protobuf"
path = "main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
switchback-codec-pb.workspace = true
switchback-mdbook.workspace = true
switchback-protobuf = { workspace = true, features = ["buf"] }
switchback-traits.workspace = true
